jitfailure-dolfin_expression_853fae130750c7b9ffa423581773f005/error.log
/tmp/tmpqu3xn7ct/dolfin_expression_853fae130750c7b9ffa423581773f005.cpp: In member function ‘virtual void dolfin::dolfin_expression_853fae130750c7b9ffa423581773f005::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpqu3xn7ct/dolfin_expression_853fae130750c7b9ffa423581773f005.cpp:62:140: error: expected ‘;’ before ‘cos’
           values[0] = -(sin(x[0]) + sin(x[1]))*sin(t) + (-cos(x[0])*cos(x[0]) +sin(x[1])*cos(x[1]))*cos(t)*cos(t) + (sin(x[0]) + sin(x[1]))cos(t);
                                                                                                                                            ^~~
